--- a/pageheader/README
+++ b/pageheader/README
@@ -5,4 +5,4 @@ Displays a text message for system announcements'
 The message is entered in the admin account at settings, Plugin settings.
 
 If you want to use HTML in the pageheader, create a file called pageheader.html 
-in the document root of your friendica instance and add the html there.
+in the document root of your hubzilla instance and add the html there.
